# project-lr10

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prompt.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.sourcecraft/: ci.yaml  config.yml
Downloads/Sem2_Lab10/: .gitignore
Downloads/Sem2_Lab10/notebooks/: Python2cem_lab10.ipynb
Downloads/Sem2_Lab10/src/: config.py
backend/: main.py  settings.py
backend/services/: __init__.py  csv_service.py  model_service.py  preprocess.py  validators.py
ml_src/: predict.py  train.py
static/: app.js  index.html  style.css
tests/: test_api.py
