[project]
name = "project-lr10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
